--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
         <div class="panel panel-default pointer" data-url="https://google.com">
           <div class="panel-heading proj-1"></div>
           <div class="panel-body">
-            <h5>Along-strike Variations in Seismicity in Central Andes</h5>
+            <h5>Along-strike Variations in Seismicity in the Central Andes</h5>
             <p>
               The Andes Mountain Range exhibits distinct along strike variations in crustal thickness, shortening and uplift. 
               Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (<a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a>) project to understand the driving processes 
@@ -121,7 +121,7 @@
         <div class="panel panel-default pointer" data-url="https://google.com">
           <div class="panel-heading proj-3"></div>
           <div class="panel-body">
-            <h5>Crustal Seismicity in Southern Puna Plateau</h5>
+            <h5>Seismicity and Present-day Crustal Deformation in the Southern Puna Plateau</h5>
             <p>
               In this study, the upper crustal structure and present-day deformation in the Southern Puna Plateau is investigated using a new regional earthquake catalog derived with a deep-learning-based phase picker. 
               Results show an order higher number of events compared to previous study, abundant strike-slip seismicity at shallow depths in the eastern Southern Puna plateau, a broad zone of seismic quiescence in the western plateau, a complex stress field in the region separating eastern and western plateau, and a well-constrained seismic swarm. 
@@ -136,7 +136,7 @@
         <div class="panel panel-default pointer" data-url="https://google.com">
           <div class="panel-heading proj-4"></div>
           <div class="panel-body">
-            <h5>Source Study of Himalayan Earthquakes (MS Project)</h5>
+            <h5>Teleseismic Source Modeling of Strong-to-major Himalayan Earthquakes</h5>
             <p>
               We analyzed earthquakes along the Himalayan arc over 30 years to understand regional variations in tectonics. Using multiple inversion techniques, including moment tensor and probabilistic bootstrapping, we modeled earthquake mechanisms and compared them across cross-sectional profiles, revealing tectonic diversity along the arc.
             </p>
