--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,9 @@
           <div class="panel-body">
             <h5>Teleseismic Source Modeling of Strong-to-major Himalayan Earthquakes</h5>
             <p>
-              We analyzed earthquakes along the Himalayan arc over 30 years to understand regional variations in tectonics. Using multiple inversion techniques, including moment tensor and probabilistic bootstrapping, we modeled earthquake mechanisms and compared them across cross-sectional profiles, revealing tectonic diversity along the arc.
+              This study was part of my Master’s Thesis, where I analyzed source mechanisms of earthquakes along the Himalayan arc over 30 years to understand regional variations in tectonic processes. 
+              Using multiple inversion techniques which include finite-fault modeling, point-source moment tensor inversion, and probabilistic bootstrapping inversion, I modeled the earthquake source processes 
+              and compared those along cross-sectional profiles across the Himalayas.
             </p>
           </div>
         </div>
