--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-12">
         <h1>Projects</h1>
-        <p><em>Here are some of my recent projects:</em></p>
+        <p><em>Here are some of my current and past projects:</em></p>
       </div>
     </div>
 
@@ -86,7 +86,7 @@
         <div class="panel panel-default pointer" data-url="https://google.com">
           <div class="panel-heading proj-1"></div>
           <div class="panel-body">
-            <h5>Along-strike Variations in Seismicity in the Central Andes</h5>
+            <h5>Along-strike Variations in Seismicity in the Central Andes (ongoing)</h5>
             <p>
               The Andes Mountain Range exhibits distinct along strike variations in crustal thickness, shortening and uplift. 
               Two dense arrays of three-component nodal and broadband seismometers were deployed at ~23-24˚S and ~35-36˚S as a part of the TransANdean Great Orogeny (<a href="https://www.geo.arizona.edu/gsat/tango/seismic" target="_blank">TANGO</a>) project to understand the driving processes 
@@ -101,7 +101,7 @@
         <div class="panel panel-default pointer" data-url="https://google.com">
           <div class="panel-heading proj-2"></div>
           <div class="panel-body">
-            <h5>Crustal Imaging of the Southern Central Andes by Seismic Autocorrelation</h5>
+            <h5>Crustal Imaging of the Southern Central Andes by Seismic Autocorrelation (ongoing)</h5>
             <p>
               Autocorrelation of seismic waveform or ambient noise data recorded on individual seismic stations can reveal subsurface reflectivity underneath the station. 
               In this study, to image the major subsurface boundaries, this processing method is implemented on the data collected by a dense array of three-component nodal and broadband 
