--- a/vitae.html
+++ b/vitae.html
@@ -60,11 +60,11 @@
     <div class="row">
       <div class="col-sm-12">
 
-        <h1>Cirriculum Vitae</h1>
+        <h1>Curriculum Vitae</h1>
 
         <p><em>Find my curriculum vitae below:</em></p>
 
-        <p class='text-right'><a href='./new_cv_sankha.pdf' target='_blank'><i class='fas fa-print fa-fw' aria-hidden='true'></i>&nbsp;Print CV</a></p><iframe width='100%'
+        <p class='text-right'><a href='./CV_SANKHA_MAY2025.pdf' target='_blank'><i class='fas fa-print fa-fw' aria-hidden='true'></i>&nbsp;Print CV</a></p><iframe width='100%'
           height='900px' frameborder='0' scrolling='yes' class='embed-responsive-item' src='./new_cv_sankha.pdf' allowfullscreen></iframe>
 
       </div>
